--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -29,6 +29,10 @@
         cursor: pointer;
         padding: 0 7px;
     }
+
+    .login-container {
+        padding-top: 50px;
+    }
 </style>
 
 <body>
@@ -38,14 +42,25 @@
                 <div class="login-container col-6 mx-auto">
                     <fieldset class="border rounded-3 p-3">
                         <legend class="float-none w-auto px-3">Login Form:</legend>
+                        <% if(error != "") {%>
+                            <div class="alert alert-danger my-1" role="alert">
+                                <%= error%>
+                            </div>
+                        <% } %>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="username">
-                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                            <label class="form-label">Username: </label>
+                            <div class="input-group has-validation">
+                                <input type="text" class="form-control" name="username"
+                                    value="<%= usernameInput %>">
+                                <div class="invalid-feedback">Please choose a username.</div>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+                            <label class="form-label">Password: </label>
+                            <div class="input-group has-validation">
+                                <input type="password" class="form-control" name="password">
+                                <div class="invalid-feedback">Please choose a username.</div>
+                            </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Login</button>
                         <hr/>
