google login voi passport

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -101,8 +101,12 @@
                                 <span>or Login with</span>
                             </div>
                             <div class="social" style="text-align: center;">
-                                <i class="bi bi-google" title="Login with Google"></i>
-                                <i class="bi bi-facebook" title="Login with Facebook"></i>
+                                <a href="/auth/google">
+                                    <i class="bi bi-google" title="Login with Google"></i>
+                                </a>
+                                <a>
+                                    <i class="bi bi-facebook" title="Login with Facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </fieldset>
