cpl login vs gg ~ flow tuong tu strategy local

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -65,6 +65,12 @@
                 }
             })
         })
+
+        $('#iconGoogle').on('click',()=>{
+            localStorage.removeItem('clientURL');
+            localStorage.setItem('clientURL', $('#redirectURL').val());
+            window.location.href = '/auth/google';
+        });
     })
 </script>
 
@@ -101,12 +107,8 @@
                                 <span>or Login with</span>
                             </div>
                             <div class="social" style="text-align: center;">
-                                <a href="/auth/google">
-                                    <i class="bi bi-google" title="Login with Google"></i>
-                                </a>
-                                <a>
-                                    <i class="bi bi-facebook" title="Login with Facebook"></i>
-                                </a>
+                                <i id="iconGoogle" class="bi bi-google" title="Login with Google"></i>
+                                <i id="iconFacebook" class="bi bi-facebook" title="Login with Facebook"></i>
                             </div>
                         </div>
                     </fieldset>
