--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,7 +11,8 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css"
+        rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
@@ -37,11 +38,15 @@
     .none-flash {
         display: none;
     }
+
+    #spanResetPassword {
+        cursor: pointer;
+    }
 </style>
 
 <script>
-    $(document).ready(function(){
-        $("#btnLogin").on('click', function(){
+    $(document).ready(function () {
+        $("#btnLogin").on('click', function () {
             const username = $('#username').val();
             const password = $('#password').val();
             const serviceURL = $('#redirectURL').val();
@@ -51,14 +56,14 @@
             $.ajax({
                 type: "POST",
                 url: `${window.location.origin}/login`,
-                data: {username, password, serviceURL},
+                data: { username, password, serviceURL },
                 withCredentials: true,
-                success: function(data){
+                success: function (data) {
                     $('#flashMsg').addClass('none-flash');
                     const redirectURL = `${data.redirectURL}/code?ssoToken=${data.code}`
-                    window.location.href=redirectURL;
+                    window.location.href = redirectURL;
                 },
-                error: function(request, status, error){
+                error: function (request, status, error) {
                     $('#passpord').val("");
                     $('#flashMsg').removeClass('none-flash');
                     $('#flashMsg').append(request.responseText);
@@ -66,60 +71,96 @@
             })
         })
 
-        $('#iconGoogle').on('click',()=>{
+        $('#iconGoogle').on('click', () => {
             localStorage.removeItem('clientURL');
             localStorage.setItem('clientURL', $('#redirectURL').val());
             window.location.href = '/auth/google';
         });
-        
-        $('#iconFacebook').on('click',()=>{
+
+        $('#iconFacebook').on('click', () => {
             localStorage.removeItem('clientURL');
             localStorage.setItem('clientURL', $('#redirectURL').val());
             window.location.href = '/auth/facebook';
         });
+
+        //Get the input field
+        const input = document.getElementById("password");
+
+        //Execute a function when the user press a key on the keyboard
+        input.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                e.preventDefault();
+                document.getElementById('btnLogin').click();
+            }
+        });
+
+        $('#spanResetPassword').on('click', () => {
+            $('#resetPasswordModal').modal('show');
+        })
     })
 </script>
 
 <body>
     <div class="container">
         <div class="row">
-                <input type="hidden" id="redirectURL" value="<%= redirectURL %>">
-                <div class="login-container col-6 mx-auto">
-                    <fieldset class="border rounded-3 p-3">
-                        <legend class="float-none w-auto px-3">Login Form:</legend>
+            <input type="hidden" id="redirectURL" value="<%= redirectURL %>">
+            <div class="login-container col-6 mx-auto">
+                <fieldset class="border rounded-3 p-3">
+                    <legend class="float-none w-auto px-3">Login Form:</legend>
 
-                            <div class="alert alert-danger my-1 none-flash" role="alert" id="flashMsg">
+                    <div class="alert alert-danger my-1 none-flash" role="alert" id="flashMsg">
 
-                            </div>
+                    </div>
 
-                        <div class="mb-3">
-                            <label class="form-label">Username: </label>
-                            <div class="input-group has-validation">
-                                <input type="text" class="form-control" name="username" id="username">
-                                <div class="invalid-feedback">Please choose a username.</div>
-                            </div>
+                    <div class="mb-3">
+                        <label class="form-label">Username: </label>
+                        <div class="input-group has-validation">
+                            <input type="text" class="form-control" name="username" id="username">
+                            <div class="invalid-feedback">Please choose a username.</div>
                         </div>
-                        <div class="mb-3">
-                            <label class="form-label">Password: </label>
-                            <div class="input-group has-validation">
-                                <input type="password" class="form-control" name="password" id="password">
-                                <div class="invalid-feedback">Please choose a username.</div>
-                            </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Password: </label>
+                        <div class="input-group has-validation">
+                            <input type="password" class="form-control" name="password" id="password">
+                            <div class="invalid-feedback">Please choose a username.</div>
                         </div>
-                        <button type="button" id="btnLogin" class="btn btn-primary">Login</button>
-                        <hr/>
-                        <div>
-                            <div style="text-align: center;">
-                                <span>or Login with</span>
-                            </div>
-                            <div class="social" style="text-align: center;">
-                                <i id="iconGoogle" class="bi bi-google" title="Login with Google"></i>
-                                <i id="iconFacebook" class="bi bi-facebook" title="Login with Facebook"></i>
-                            </div>
+                    </div>
+                    <button type="button" id="btnLogin" class="btn btn-primary">Login</button>
+                    <div class="mt-3">
+                        <span id="spanResetPassword">Forgot Password ?</span>
+                    </div>
+                    <hr />
+                    <div>
+                        <div style="text-align: center;">
+                            <span>or Login with</span>
                         </div>
-                    </fieldset>
+                        <div class="social" style="text-align: center;">
+                            <i id="iconGoogle" class="bi bi-google" title="Login with Google"></i>
+                            <i id="iconFacebook" class="bi bi-facebook" title="Login with Facebook"></i>
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="resetPasswordModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
