design lai forgot password + set up nodemailer

--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -15,12 +15,44 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
+<script>
+    $(document).ready(function () {
+        $("#btnCode").on('click', function () {
+            let email = $('#email').val();
+            if(!email){
+                alert('Please enter your email')
+                return;
+            }
+
+            $.ajax({
+                type: "POST",
+                url: `${window.location.origin}/send-code`,
+                data: { email },
+                withCredentials: true,
+                success: function (data) {
+                    console.log(data)
+                },
+                error: function (request, status, error) {
+                    console.log(error);
+                }
+            })
+        })
+    })
+</script>
+
 <body>
     <div class="container mt-5">
         <div class="row">
-            <div class="mb-3">
+            <div class="mb-3 col-6">
                 <label class="form-label">Email address</label>
                 <input type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3 col-auto">
+                <button class="btn btn-success" id="btnCode" style="margin-top: 30px;">Send CODE</button>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Enter Code</label>
+                <input type="text" class="form-control" id="code">
             </div>
             <div class="mb-3">
                 <label class="form-label">New password</label>
