--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -128,7 +128,7 @@
                     </div>
                     <button type="button" id="btnLogin" class="btn btn-primary">Login</button>
                     <div class="mt-3">
-                        <span id="spanResetPassword">Forgot Password ?</span>
+                        <a href="/forgot-password">Forgot Password ?</a>
                     </div>
                     <hr />
                     <div>
