--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -30,6 +30,7 @@
                 data: { email },
                 withCredentials: true,
                 success: function (data) {
+                    alert('Send email success!')
                     console.log(data)
                 },
                 error: function (request, status, error) {
