--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -30,11 +30,43 @@
                 data: { email },
                 withCredentials: true,
                 success: function (data) {
-                    alert('Send email success!')
+                    alert('Send code success!')
                     console.log(data)
                 },
                 error: function (request, status, error) {
-                    console.log(error);
+                    console.log(request.responseText);
+                    let errorEM = request?.responseText ?? ''
+                    if(errorEM){
+                        let x = JSON.parse(errorEM)
+                        alert(x.EM)
+                    }
+                }
+            })
+        })
+
+        $("#btnSubmit").on('click', function () {
+            //validate
+            let email = $('#email').val();
+            let code = $('#code').val();
+            let newPassword= $('#newPassword').val();
+            let confirmPassword = $('#confirmPassword').val();
+
+            $.ajax({
+                type: "POST",
+                url: `${window.location.origin}/submit-reset-password`,
+                data: { email, code, newPassword, confirmPassword },
+                withCredentials: true,
+                success: function (data) {
+                    alert('Reset password success!')
+                    window.location.href = '/'
+                },
+                error: function (request, status, error) {
+                    console.log(request.responseText);
+                    let errorEM = request?.responseText ?? ''
+                    if(errorEM){
+                        let x = JSON.parse(errorEM)
+                        alert(x.EM)
+                    }
                 }
             })
         })
@@ -64,7 +96,7 @@
                 <input type="password" class="form-control" id="confirmPassword">
             </div>
             <div class="mb-3">
-                <button type="button" class="btn btn-primary">Submit</button>
+                <button id="btnSubmit" type="button" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
